# TimeTracker

./: .gitignore
TimeTracker/: Exporter.cpp  Exporter.h  FireBaseClient.cpp  FireBaseClient.h  RestBase.cpp  RestBase.h  TimeTracker.cpp  TimeTracker.h  TimeTracker.sln  TimeTracker.vcxproj  TimeTracker.vcxproj.filters  TimeTracking.cpp  TimeTracking.h  dllmain.cpp  dllmain.h  main.cpp
TimeTracker/time_tracker/: Cargo.toml  build.rs
TimeTracker/time_tracker/ccompile/: native.cpp  native.h  stdafx.cpp  stdafx.h
TimeTracker/time_tracker/src/: firebase.rs  main.rs  native.rs  receive_types.rs  restable.rs  rpc.rs  sql.rs  time_tracking.rs  windows.rs
TimeTracker/time_tracker/src/windows/: time_tracker.rc
cpp/TimeTracker/: FireBaseClient.h  ReadMe.txt  RestBase.cpp  RestBase.h  TimeTracker.cpp  TimeTracker.h  TimeTracker.vcxproj.filters  TimeTracking.cpp  TimeTracking.h  dllmain.cpp  dllmain.h
time_tracker/: .gitignore  Cargo.toml  QWEN.md  ReadMe.md  build.rs  env.toml.example  test_memory_mpv.py
time_tracker/src/: error.rs  firebase.rs  hook.rs  lib.rs  linux.rs  main.rs  native.rs  receive_types.rs  restable.rs  rpc.rs  seaorm_client.rs  seaorm_queries.rs  sql.rs  sql_queries.rs  structs.rs  test_client.rs  test_db.rs  time_tracking.rs  web_socket.rs  windows.rs
time_tracker/src/entities/: active_checkpoints.rs  apps.rs  checkpoint_durations.rs  checkpoints.rs  mod.rs  process_aliases.rs  timeline.rs  timeline_checkpoints.rs
time_tracker/src/migration/: m20230101_000001_create_apps_table.rs  m20230101_000002_create_timeline_table.rs  m20230101_000003_create_checkpoints_table.rs  m20230101_000004_create_timeline_checkpoints_table.rs  m20230101_000005_create_checkpoint_durations_table.rs  m20230101_000006_create_active_checkpoints_table.rs  m20230101_000007_create_process_aliases_table.rs  mod.rs
time_tracker/src/websocket/: async_server.rs  broadcast.rs  broadcast_logger.rs  client.rs  connection_manager.rs  handlers.rs  mod.rs  server.rs  tracking_notifier.rs  tracking_service.rs
time_tracker/tests/: basic_test.rs  checkpoint_test.rs  debug_checkpoint_test.rs  direct_checkpoint_test.rs  full_process_test.rs  minimal_checkpoint_test.rs  receive_types_test.rs  simple_checkpoint_test.rs  test_environment.rs  time_tracking_test.rs
