[package]
name = "time_tracker"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.66"
reqwest = { version = "0.10.0", optional = true }
serde_json = "1.0.44"
serde = "1.0.104"
crossbeam-channel = "0.4.0"
chrono = "0.4.10"
log = "0.4.8"
env_logger = "0.7.1"
jsonrpc-core = "14.0.5"
jsonrpc-http-server = "14.0.5"
lazy_static = "1.4.0"
postgres = { version = "0.15.2", features = ["with-chrono"], optional = true }
inputbot = "0.4.0"
rodio = { version = "0.10.0", default-features = false, features = ["vorbis"] }
rust-embed = "5.2.0"
barrel = { version = "0.6.5", features = ["pg"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["tlhelp32", "handleapi", "winver", "winuser", "wincon", "shellapi"] }
wio = "0.2.2"
regex = "1.3.1"
systray = "0.3.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.3.2"

[features]
firebase = ["reqwest"]
psql = ["postgres", "barrel"]
