[package]
name = "time_tracker"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = "1.0.34"

[dependencies]
libc = "0.2.51"
reqwest = "0.9.15"
serde_json = "1.0.39"
serde = "1.0.90"
crossbeam-channel = "0.3.8"
chrono = "0.4.6"
crossbeam = "0.7.1"
