[package]
name = "time_tracker"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.51"
reqwest = { version = "0.9.15", optional = true }
serde_json = "1.0.39"
serde = "1.0.90"
crossbeam-channel = "0.3.8"
chrono = "0.4.6"
log = "0.4.6"
env_logger = "0.6.1"
jsonrpc-core = "11.0.0"
jsonrpc-http-server = "11.0.0"
lazy_static = "1.3.0"
postgres = { version = "0.15.2", features = ["with-chrono"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["tlhelp32", "handleapi", "winver", "errhandlingapi"] }
wio = "0.2.2"
regex = "1.1.6"

[features]
firebase = ["reqwest"]
psql = ["postgres"]
